--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.blockPhonebook {
+  padding: 30px;
+  background-image: url(./image/2.2.3.jpg);
+  background-color: rgb(221, 247, 238);
+  border-radius: 20px;
+}
+
+.titlePhonebook {
+  color: transparent;
+  -webkit-text-stroke: 1px aqua;
+  text-shadow: 2px 0px 10px rgba(0, 0, 0, 0.5);
+  margin-bottom: 0;
+}
+/* 
+alert {
+  color: red;
+  font-size: 30px;
+} */
+
+.titleContacts {
+  color: transparent;
+  -webkit-text-stroke: 1px rgb(164, 202, 12);
+  text-shadow: 2px 0px 10px rgba(0, 0, 0, 0.5);
+  margin-bottom: 0;
+}
+
+.formContacts {
+  background-color: rgb(252, 253, 248);
+  display: block;
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+.pMessage {
+  color: rgb(233, 50, 144);
+  margin-bottom: 2px;
+  font-size: 16px;
+  padding-left: 15px;
+}
